--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-reset.css" rel="stylesheet">
     <!--external css-->
-    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <!-- <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" /> -->
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
@@ -39,16 +39,25 @@
         <center><img src="img/webmel5.png"></center>
     </div>
       
-      <form class="form-signin" action="index.php">
+      <form class="form-signin" method="POST" action="http://localhost/webmail/">
+        <input type="hidden" name="referer" value="REFERER_URL" />
+        <input type="hidden" name="ctz" id="ctz" value="TIMEZONE" />
+        <input type="hidden" name="language" value="LANGUAGE_CODE" />
+        <input type="hidden" name="to" id="to" value="INTERFACE" />
+        <input type="hidden" name="disable_ip_check" value="1"/>
+        <input type="hidden" name="_c" value="auth" />
+        <input type="hidden" name="_a[login]" value="1"/>
+        <input type="hidden" name="type" value="external"/>
+        <input type="hidden" name="_n[js]" value="0" id="jscontrol"/>
         <h2 class="form-signin-heading"> Log Masuk </h2>
         <div class="login-wrap">
-            <input type="text" class="form-control" placeholder="Emel Pengguna" autofocus>
-            <input type="password" class="form-control" placeholder="Kata Laluan">
+            <input type="text" name="iw_username" value="" placeholder="Emel Pengguna" class="form-control"/>
+            <input type="password" name="password" value="" class="form-control" placeholder="Kata Laluan"/>
             <label class="checkbox">
                 <input type="checkbox" value="remember-me"> Remember me
                 <span class="pull-right"> <a href="#"> Lupa Kata Laluan?</a></span>
             </label>
-            <button class="btn btn-lg btn-login btn-block" type="submit"> Log Masuk </button>
+            <input type="submit" value="Log Masuk"/>
             <!-- <p>or you can sign in via social network</p> -->
             <!-- <div class="login-social-link"> -->
                 <a href="http://www.pahang.gov.my/tatacara-ringkas-penggunaan-emel-rasmi-kerajaan-negeri-pahang">
