--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
     </div>
       
       <form class="form-signin" method="POST" action="http://localhost/webmail/">
-        <input type="hidden" name="referer" value="REFERER_URL" />
+        <input type="hidden" name="referer" value="http://localhost/webmail/" />
         <input type="hidden" name="ctz" id="ctz" value="TIMEZONE" />
         <input type="hidden" name="language" value="LANGUAGE_CODE" />
         <input type="hidden" name="to" id="to" value="INTERFACE" />
